# spectral-freeze

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: FreezeProcessor.cpp  FreezeProcessor.h  OrganicProcessor.cpp  OrganicProcessor.h  SidechainProcessor.cpp  SidechainProcessor.h  SpectralConstants.h  SpectralFilter.cpp  SpectralFilter.h  StftProcessor.cpp  StftProcessor.h
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  juce.d.ts  main.tsx  styles.css
ui/src/components/: FreezeButton.tsx  Knob.tsx
ui/src/hooks/: useSlider.ts  useToggle.ts
